--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      </div>
 	  <div class="flex-column">
 	  	               <p>quiz&nbsp;de&nbsp;<b>Matlab</b></p>
-	                	<p>10&nbsp;question (&nbsp;<i></i>&nbsp;)</p>
+	                	<p>(&nbsp;<i></i>&nbsp;)</p>
 	  </div>
 	  <div class="flex-column"><p><span id="minutes">00</span>:<span id="seconds">00</span></p></div>
 </header>
