--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <!--******************-->
    <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" type="text/css" href="style.css">
+   <link rel="stylesheet" type="text/css" href="style.css"/>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
    <!----external Links---->
    <script src="jquery.js"></script>
    <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +26,7 @@
 	  	               <p>quiz&nbsp;de&nbsp;<b>Matlab</b></p>
 	                	<p>(&nbsp;<i></i>&nbsp;)</p>
 	  </div>
-	  <div class="flex-column"><p><span id="minutes">00</span>:<span id="seconds">00</span></p></div>
+	  <div class="flex-column"><p><span id="seconds">00</span>s</p></div>
 </header>
 <section class="progress"><div id="progress-bar"><i id="progress-number">0</i></div></section>	
 <main>
